--- a/Notes.css
+++ b/Notes.css
@@ -12,7 +12,7 @@ body{
     color: #2f0df0;
 }
 .fb{
-    color: purple;
+    color: #800080;
 }
 .Youtube{
     color: #0dcaf0
@@ -24,7 +24,7 @@ body{
     color: yellowgreen;
 }
 .Facebook{
-    color: purple;
+    color: #800080;
 }
 .Telegram{
     color: #2f0df0;
